tests/compiler_diag_runtime_const_if_true_bad.stderr
tests/compiler_diag_runtime_const_if_true_bad.hop:6:2: error: HOP2075: consteval error: int is too small
